--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        Initial commit
+        test the system
         <noscript>
             You need to enable JavaScript to run this app.
         </noscript>
